--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>our PHP form </title>
 </head>
 <body>
- <form action="">
+ <form action="add.php" method="get">
     <label for="usermame">Username:</label>
     <input type="text" id="username" name="username" placeholder="Username"><br><br>
     <label for="password">Password: </label>
